syntax = "proto3";

package io.iohk.connector;

// The connections service definition.
service Connections {
    // generate a connection code, each issuer needs to generate a unique code before
    // being able to connect to a credential holder/candidate
    rpc NewConnectionCode (NewConnectionCodeRequest) returns (NewConnectionCodeReply) {}

    rpc AcceptConnection (AcceptConnectionRequest) returns (AcceptConnectionReply) {}
}

// the request to get a new connection code, authenticated by header
message NewConnectionCodeRequest {
}

// a connection code was generated
message NewConnectionCodeReply {
    string code = 1; // the unique connection code
}

message AcceptConnectionRequest {
    string code = 1; // the code generated by the connection to accept
}

message AcceptConnectionReply {
}
